syntax.output
State 77 conflicts: 1 shift/reduce
State 78 conflicts: 1 shift/reduce
State 113 conflicts: 1 shift/reduce
State 114 conflicts: 1 shift/reduce
State 115 conflicts: 1 shift/reduce
State 116 conflicts: 1 shift/reduce
State 117 conflicts: 1 shift/reduce
State 118 conflicts: 1 shift/reduce
State 119 conflicts: 1 shift/reduce
State 120 conflicts: 1 shift/reduce
State 121 conflicts: 1 shift/reduce
State 122 conflicts: 1 shift/reduce
State 123 conflicts: 1 shift/reduce
State 124 conflicts: 1 shift/reduce
State 125 conflicts: 1 shift/reduce
State 127 conflicts: 16 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | ε

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier error
    8       | Specifier ExtDecList error
    9       | error SEMI

   10 ExtDecList: VarDec
   11           | VarDec COMMA ExtDecList

   12 Specifier: TYPE
   13          | StructSpecifier

   14 StructSpecifier: STRUCT ID LC DefList RC
   15                | STRUCT ID

   16 VarDec: ID
   17       | ERROR
   18       | VarDec LB INT RB
   19       | VarDec LB HEX_INT RB

   20 FunDec: ID LP VarList RP
   21       | ID LP RP
   22       | ID LP VarList error
   23       | ID LP error

   24 VarList: ParamDec COMMA VarList
   25        | ParamDec

   26 ParamDec: Specifier VarDec

   27 CompSt: LC DefList StmtList RC

   28 StmtList: Stmt StmtList
   29         | ε

   30 Stmt: Exp SEMI
   31     | CompSt
   32     | RETURN Exp SEMI
   33     | IF LP Exp RP Stmt
   34     | IF LP Exp RP Stmt ELSE Stmt
   35     | WHILE LP Exp RP Stmt
   36     | Exp error
   37     | RETURN Exp error
   38     | IF LP Exp error Stmt
   39     | WHILE LP Exp error Stmt

   40 DefList: Def DefList
   41        | ε

   42 Def: Specifier DecList SEMI
   43    | Specifier DecList error

   44 DecList: Dec
   45        | Dec COMMA DecList

   46 Dec: VarDec
   47    | VarDec ASSIGN Exp

   48 Exp: Exp ASSIGN Exp
   49    | Exp AND Exp
   50    | Exp OR Exp
   51    | Exp LT Exp
   52    | Exp LE Exp
   53    | Exp GT Exp
   54    | Exp GE Exp
   55    | Exp NE Exp
   56    | Exp EQ Exp
   57    | Exp PLUS Exp
   58    | Exp MINUS Exp
   59    | Exp MUL Exp
   60    | Exp DIV Exp
   61    | LP Exp RP
   62    | MINUS Exp
   63    | NOT Exp
   64    | ID LP Args RP
   65    | ID LP RP
   66    | Exp LB Exp RB
   67    | Exp DOT ID
   68    | ID
   69    | INT
   70    | HEX_INT
   71    | FLOAT
   72    | CHAR
   73    | Exp ERROR Exp
   74    | ERROR
   75    | LP Exp error
   76    | ID LP Args error
   77    | ID LP error

   78 Args: Exp COMMA Args
   79     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 7 8 9 22 23 36 37 38 39 43 75 76 77
    INT <AptNode> (258) 18 69
    HEX_INT <AptNode> (259) 19 70
    FLOAT <AptNode> (260) 71
    CHAR <AptNode> (261) 72
    ID <AptNode> (262) 14 15 16 20 21 22 23 64 65 67 68 76 77
    TYPE <AptNode> (263) 12
    STRUCT <AptNode> (264) 14 15
    IF <AptNode> (265) 33 34 38
    ELSE <AptNode> (266) 34
    WHILE <AptNode> (267) 35 39
    RETURN <AptNode> (268) 32 37
    DOT <AptNode> (269) 67
    SEMI <AptNode> (270) 4 5 9 30 32 42
    COMMA <AptNode> (271) 11 24 45 78
    ASSIGN <AptNode> (272) 47 48
    LT <AptNode> (273) 51
    LE <AptNode> (274) 52
    GT <AptNode> (275) 53
    GE <AptNode> (276) 54
    NE <AptNode> (277) 55
    EQ <AptNode> (278) 56
    PLUS <AptNode> (279) 57
    MINUS <AptNode> (280) 58 62
    MUL <AptNode> (281) 59
    DIV <AptNode> (282) 60
    AND <AptNode> (283) 49
    OR <AptNode> (284) 50
    NOT <AptNode> (285) 63
    LP <AptNode> (286) 20 21 22 23 33 34 35 38 39 61 64 65 75 76 77
    RP <AptNode> (287) 20 21 33 34 35 61 64 65
    LB <AptNode> (288) 18 19 66
    RB <AptNode> (289) 18 19 66
    LC <AptNode> (290) 14 27
    RC <AptNode> (291) 14 27
    ERROR <AptNode> (292) 17 73 74


Nonterminals, with rules where they appear

    $accept (38)
        on left: 0
    Program <AptNode> (39)
        on left: 1
        on right: 0
    ExtDefList <AptNode> (40)
        on left: 2 3
        on right: 1 2
    ExtDef <AptNode> (41)
        on left: 4 5 6 7 8 9
        on right: 2
    ExtDecList <AptNode> (42)
        on left: 10 11
        on right: 4 8 11
    Specifier <AptNode> (43)
        on left: 12 13
        on right: 4 5 6 7 8 26 42 43
    StructSpecifier <AptNode> (44)
        on left: 14 15
        on right: 13
    VarDec <AptNode> (45)
        on left: 16 17 18 19
        on right: 10 11 18 19 26 46 47
    FunDec <AptNode> (46)
        on left: 20 21 22 23
        on right: 6
    VarList <AptNode> (47)
        on left: 24 25
        on right: 20 22 24
    ParamDec <AptNode> (48)
        on left: 26
        on right: 24 25
    CompSt <AptNode> (49)
        on left: 27
        on right: 6 31
    StmtList <AptNode> (50)
        on left: 28 29
        on right: 27 28
    Stmt <AptNode> (51)
        on left: 30 31 32 33 34 35 36 37 38 39
        on right: 28 33 34 35 38 39
    DefList <AptNode> (52)
        on left: 40 41
        on right: 14 27 40
    Def <AptNode> (53)
        on left: 42 43
        on right: 40
    DecList <AptNode> (54)
        on left: 44 45
        on right: 42 43 45
    Dec <AptNode> (55)
        on left: 46 47
        on right: 44 45
    Exp <AptNode> (56)
        on left: 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77
        on right: 30 32 33 34 35 36 37 38 39 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 66 67 73 75 78 79
    Args <AptNode> (57)
        on left: 78 79
        on right: 64 76 78


State 0

    0 $accept: • Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    9 ExtDef: error • SEMI

    SEMI  shift, and go to state 9


State 2

   12 Specifier: TYPE •

    $default  reduce using rule 12 (Specifier)


State 3

   14 StructSpecifier: STRUCT • ID LC DefList RC
   15                | STRUCT • ID

    ID  shift, and go to state 10


State 4

    0 $accept: Program • $end

    $end  shift, and go to state 11


State 5

    1 Program: ExtDefList •

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef • ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 12
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier • ExtDecList SEMI
    5       | Specifier • SEMI
    6       | Specifier • FunDec CompSt
    7       | Specifier • error
    8       | Specifier • ExtDecList error

    error  shift, and go to state 13
    ID     shift, and go to state 14
    SEMI   shift, and go to state 15
    ERROR  shift, and go to state 16

    ExtDecList  go to state 17
    VarDec      go to state 18
    FunDec      go to state 19


State 8

   13 Specifier: StructSpecifier •

    $default  reduce using rule 13 (Specifier)


State 9

    9 ExtDef: error SEMI •

    $default  reduce using rule 9 (ExtDef)


State 10

   14 StructSpecifier: STRUCT ID • LC DefList RC
   15                | STRUCT ID •

    LC  shift, and go to state 20

    $default  reduce using rule 15 (StructSpecifier)


State 11

    0 $accept: Program $end •

    $default  accept


State 12

    2 ExtDefList: ExtDef ExtDefList •

    $default  reduce using rule 2 (ExtDefList)


State 13

    7 ExtDef: Specifier error •

    $default  reduce using rule 7 (ExtDef)


State 14

   16 VarDec: ID •
   20 FunDec: ID • LP VarList RP
   21       | ID • LP RP
   22       | ID • LP VarList error
   23       | ID • LP error

    LP  shift, and go to state 21

    $default  reduce using rule 16 (VarDec)


State 15

    5 ExtDef: Specifier SEMI •

    $default  reduce using rule 5 (ExtDef)


State 16

   17 VarDec: ERROR •

    $default  reduce using rule 17 (VarDec)


State 17

    4 ExtDef: Specifier ExtDecList • SEMI
    8       | Specifier ExtDecList • error

    error  shift, and go to state 22
    SEMI   shift, and go to state 23


State 18

   10 ExtDecList: VarDec •
   11           | VarDec • COMMA ExtDecList
   18 VarDec: VarDec • LB INT RB
   19       | VarDec • LB HEX_INT RB

    COMMA  shift, and go to state 24
    LB     shift, and go to state 25

    $default  reduce using rule 10 (ExtDecList)


State 19

    6 ExtDef: Specifier FunDec • CompSt

    LC  shift, and go to state 26

    CompSt  go to state 27


State 20

   14 StructSpecifier: STRUCT ID LC • DefList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 41 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 8
    DefList          go to state 29
    Def              go to state 30


State 21

   20 FunDec: ID LP • VarList RP
   21       | ID LP • RP
   22       | ID LP • VarList error
   23       | ID LP • error

    error   shift, and go to state 31
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3
    RP      shift, and go to state 32

    Specifier        go to state 33
    StructSpecifier  go to state 8
    VarList          go to state 34
    ParamDec         go to state 35


State 22

    8 ExtDef: Specifier ExtDecList error •

    $default  reduce using rule 8 (ExtDef)


State 23

    4 ExtDef: Specifier ExtDecList SEMI •

    $default  reduce using rule 4 (ExtDef)


State 24

   11 ExtDecList: VarDec COMMA • ExtDecList

    ID     shift, and go to state 36
    ERROR  shift, and go to state 16

    ExtDecList  go to state 37
    VarDec      go to state 18


State 25

   18 VarDec: VarDec LB • INT RB
   19       | VarDec LB • HEX_INT RB

    INT      shift, and go to state 38
    HEX_INT  shift, and go to state 39


State 26

   27 CompSt: LC • DefList StmtList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 41 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 8
    DefList          go to state 40
    Def              go to state 30


State 27

    6 ExtDef: Specifier FunDec CompSt •

    $default  reduce using rule 6 (ExtDef)


State 28

   42 Def: Specifier • DecList SEMI
   43    | Specifier • DecList error

    ID     shift, and go to state 36
    ERROR  shift, and go to state 16

    VarDec   go to state 41
    DecList  go to state 42
    Dec      go to state 43


State 29

   14 StructSpecifier: STRUCT ID LC DefList • RC

    RC  shift, and go to state 44


State 30

   40 DefList: Def • DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 41 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 8
    DefList          go to state 45
    Def              go to state 30


State 31

   23 FunDec: ID LP error •

    $default  reduce using rule 23 (FunDec)


State 32

   21 FunDec: ID LP RP •

    $default  reduce using rule 21 (FunDec)


State 33

   26 ParamDec: Specifier • VarDec

    ID     shift, and go to state 36
    ERROR  shift, and go to state 16

    VarDec  go to state 46


State 34

   20 FunDec: ID LP VarList • RP
   22       | ID LP VarList • error

    error  shift, and go to state 47
    RP     shift, and go to state 48


State 35

   24 VarList: ParamDec • COMMA VarList
   25        | ParamDec •

    COMMA  shift, and go to state 49

    $default  reduce using rule 25 (VarList)


State 36

   16 VarDec: ID •

    $default  reduce using rule 16 (VarDec)


State 37

   11 ExtDecList: VarDec COMMA ExtDecList •

    $default  reduce using rule 11 (ExtDecList)


State 38

   18 VarDec: VarDec LB INT • RB

    RB  shift, and go to state 50


State 39

   19 VarDec: VarDec LB HEX_INT • RB

    RB  shift, and go to state 51


State 40

   27 CompSt: LC DefList • StmtList RC

    INT      shift, and go to state 52
    HEX_INT  shift, and go to state 53
    FLOAT    shift, and go to state 54
    CHAR     shift, and go to state 55
    ID       shift, and go to state 56
    IF       shift, and go to state 57
    WHILE    shift, and go to state 58
    RETURN   shift, and go to state 59
    MINUS    shift, and go to state 60
    NOT      shift, and go to state 61
    LP       shift, and go to state 62
    LC       shift, and go to state 26
    ERROR    shift, and go to state 63

    $default  reduce using rule 29 (StmtList)

    CompSt    go to state 64
    StmtList  go to state 65
    Stmt      go to state 66
    Exp       go to state 67


State 41

   18 VarDec: VarDec • LB INT RB
   19       | VarDec • LB HEX_INT RB
   46 Dec: VarDec •
   47    | VarDec • ASSIGN Exp

    ASSIGN  shift, and go to state 68
    LB      shift, and go to state 25

    $default  reduce using rule 46 (Dec)


State 42

   42 Def: Specifier DecList • SEMI
   43    | Specifier DecList • error

    error  shift, and go to state 69
    SEMI   shift, and go to state 70


State 43

   44 DecList: Dec •
   45        | Dec • COMMA DecList

    COMMA  shift, and go to state 71

    $default  reduce using rule 44 (DecList)


State 44

   14 StructSpecifier: STRUCT ID LC DefList RC •

    $default  reduce using rule 14 (StructSpecifier)


State 45

   40 DefList: Def DefList •

    $default  reduce using rule 40 (DefList)


State 46

   18 VarDec: VarDec • LB INT RB
   19       | VarDec • LB HEX_INT RB
   26 ParamDec: Specifier VarDec •

    LB  shift, and go to state 25

    $default  reduce using rule 26 (ParamDec)


State 47

   22 FunDec: ID LP VarList error •

    $default  reduce using rule 22 (FunDec)


State 48

   20 FunDec: ID LP VarList RP •

    $default  reduce using rule 20 (FunDec)


State 49

   24 VarList: ParamDec COMMA • VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 33
    StructSpecifier  go to state 8
    VarList          go to state 72
    ParamDec         go to state 35


State 50

   18 VarDec: VarDec LB INT RB •

    $default  reduce using rule 18 (VarDec)


State 51

   19 VarDec: VarDec LB HEX_INT RB •

    $default  reduce using rule 19 (VarDec)


State 52

   69 Exp: INT •

    $default  reduce using rule 69 (Exp)


State 53

   70 Exp: HEX_INT •

    $default  reduce using rule 70 (Exp)


State 54

   71 Exp: FLOAT •

    $default  reduce using rule 71 (Exp)


State 55

   72 Exp: CHAR •

    $default  reduce using rule 72 (Exp)


State 56

   64 Exp: ID • LP Args RP
   65    | ID • LP RP
   68    | ID •
   76    | ID • LP Args error
   77    | ID • LP error

    LP  shift, and go to state 73

    $default  reduce using rule 68 (Exp)


State 57

   33 Stmt: IF • LP Exp RP Stmt
   34     | IF • LP Exp RP Stmt ELSE Stmt
   38     | IF • LP Exp error Stmt

    LP  shift, and go to state 74


State 58

   35 Stmt: WHILE • LP Exp RP Stmt
   39     | WHILE • LP Exp error Stmt

    LP  shift, and go to state 75


State 59

   32 Stmt: RETURN • Exp SEMI
   37     | RETURN • Exp error

    INT      shift, and go to state 52
    HEX_INT  shift, and go to state 53
    FLOAT    shift, and go to state 54
    CHAR     shift, and go to state 55
    ID       shift, and go to state 56
    MINUS    shift, and go to state 60
    NOT      shift, and go to state 61
    LP       shift, and go to state 62
    ERROR    shift, and go to state 63

    Exp  go to state 76


State 60

   62 Exp: MINUS • Exp

    INT      shift, and go to state 52
    HEX_INT  shift, and go to state 53
    FLOAT    shift, and go to state 54
    CHAR     shift, and go to state 55
    ID       shift, and go to state 56
    MINUS    shift, and go to state 60
    NOT      shift, and go to state 61
    LP       shift, and go to state 62
    ERROR    shift, and go to state 63

    Exp  go to state 77


State 61

   63 Exp: NOT • Exp

    INT      shift, and go to state 52
    HEX_INT  shift, and go to state 53
    FLOAT    shift, and go to state 54
    CHAR     shift, and go to state 55
    ID       shift, and go to state 56
    MINUS    shift, and go to state 60
    NOT      shift, and go to state 61
    LP       shift, and go to state 62
    ERROR    shift, and go to state 63

    Exp  go to state 78


State 62

   61 Exp: LP • Exp RP
   75    | LP • Exp error

    INT      shift, and go to state 52
    HEX_INT  shift, and go to state 53
    FLOAT    shift, and go to state 54
    CHAR     shift, and go to state 55
    ID       shift, and go to state 56
    MINUS    shift, and go to state 60
    NOT      shift, and go to state 61
    LP       shift, and go to state 62
    ERROR    shift, and go to state 63

    Exp  go to state 79


State 63

   74 Exp: ERROR •

    $default  reduce using rule 74 (Exp)


State 64

   31 Stmt: CompSt •

    $default  reduce using rule 31 (Stmt)


State 65

   27 CompSt: LC DefList StmtList • RC

    RC  shift, and go to state 80
